--- a/MakeUsChallenge/app/build.gradle
+++ b/MakeUsChallenge/app/build.gradle
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 
 }
 apply plugin: 'com.android.application'
@@ -43,4 +47,9 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'
 
+    implementation('io.socket:socket.io-client:1.0.0') {
+        exclude group: 'org.json', module: 'json'
+    }
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation group: 'io.socket', name: 'socket.io-client', version: '1.0.0'
 }
