--- a/MakeUsChallenge/app/src/main/AndroidManifest.xml
+++ b/MakeUsChallenge/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.makeuschallenge">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".src.ApplicationClass"
         android:allowBackup="true"
@@ -9,8 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".src.login.LoginActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".src.main.looktext.LookTextActivity"></activity>
+        <activity android:name=".src.main.chatting.ChattingActivity" />
+        <activity android:name=".src.login.select.signup.SignUpActivity" />
+        <activity android:name=".src.login.select.SelectActivity" />
+        <activity android:name=".src.login.LoginActivity" />
         <activity android:name=".src.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".src.main.MainActivity"/>
+        <activity android:name=".src.main.MainActivity" />
     </application>
 
 </manifest>
